--- a/block-BHaaci/index.html
+++ b/block-BHaaci/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assignment1</title>
+    <!-- CSS -->
     <link rel="stylesheet" href="assets/stylesheet/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,27 +14,34 @@
       rel="stylesheet"
     />
   </head>
+  
   <body>
-    <section class="container flex">
-      <article class="article">
-        <h1>Learn to code by wtching others</h1>
-        <p>
+    <main>
+        <div class="container flex">
+        <div class="flex-48 intro-text">
+            <h1 class="heading">Learn to code by wtching others</h1>
+        <p class="text">
           See how experienced develeopers solve problems in real-time. Watching
           scripted tutorials is great, but understanding how developers think is
           invaluable.
         </p>
-      </article>
-      <form action="login">
-        <button class="btn-1"><small> Try it free 7 days</small> then $20/mo. thereafter</button>
-          <fieldset>
-          <input type="text">
-          <input type="name" name="name" placeholder="Last Name"> 
-          <input type="email" name="email" placeholder="Email Address">
-          <input type="password" name="Password" placeholder="Password">
-          <button class="btn-2">CLAIM YOUR FREE TRIAL</button>
-          <small>By clicking the button, you are agreeing to our <span>Terms and Services</span></small>
-        </fieldset>
-      </form>
-    </section>
+        </div>
+        <div class="flex-48">
+            <a class="btn btn-primary" href="#">
+                <strong>Try it free 7 days</strong> then $20/month. thereafter
+            </a>
+        <form action="">
+            <fieldset>
+                <input class="form-control" type="text" placeholder="First Name">
+                <input class="form-control" type="text" placeholder="Last Name">
+                <input class="form-control" type="email" placeholder="Email Address">
+                <input class="form-control" type="Password" placeholder="Password">
+                <input class="btn btn-secondary" type="submit" value="claim your free trial">
+                <p>By clickimg the button you are agreeing to our<a href=""> Terms and Services</a></p>
+            </fieldset>
+        </form>
+    </div>
+</div>
+    </main>
   </body>
 </html>
