--- a/block-BHaaci/index.html
+++ b/block-BHaaci/index.html
@@ -37,7 +37,7 @@
                 <input class="form-control" type="email" placeholder="Email Address">
                 <input class="form-control" type="Password" placeholder="Password">
                 <input class="btn btn-secondary" type="submit" value="claim your free trial">
-                <p>By clickimg the button you are agreeing to our<a href=""> Terms and Services</a></p>
+                <p>By clickimg the button you are agreeing to our<a href="#"> Terms and Services</a></p>
             </fieldset>
         </form>
     </div>
